infrastructure/kyverno/tests/validating_image-version/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemonset-latest
spec:
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: app
        image: nginx:latest
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemonset-no-tag
spec:
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: app
        image: nginx
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: daemonset-fixed-tag
spec:
  selector:
    matchLabels:
      app: test-app
  template:
    metadata:
      labels:
        app: test-app
    spec:
      containers:
      - name: app
        image: nginx:1.20
