infrastructure/kyverno/tests/validating_image-version/job.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: job-latest
spec:
  template:
    spec:
      containers:
      - name: app
        image: nginx:latest
      restartPolicy: Never
---
apiVersion: batch/v1
kind: Job
metadata:
  name: job-no-tag
spec:
  template:
    spec:
      containers:
      - name: app
        image: nginx
      restartPolicy: Never
---
apiVersion: batch/v1
kind: Job
metadata:
  name: job-fixed-tag
spec:
  template:
    spec:
      containers:
      - name: app
        image: nginx:1.20
      restartPolicy: Never
